--- a/create-point.html
+++ b/create-point.html
@@ -71,7 +71,41 @@
             </fieldset>
             
             <fieldset>
+                <legend>
+                    <h2>Ítens de Coleta</h2>
+                </legend>
+                <div class="items-grid">
+                    <li data-id="1">
+                        <img src="/assets/lampadas.svg" alt="Lâmpadas">
+                        <span>Lâmpadas</span>
+                    </li>
+                    <!-- dica: ctrl + D seleciona os dois nomes identicos e pode ser alterado ao mesmo tempo -->
+                    <li data-id="2">
+                        <img src="/assets/baterias.svg" alt="Pilhas e Baterias">
+                        <span>Pilhas e Baterias</span>
+                    </li>
+                    
+                    <li data-id="3">
+                        <img src="/assets/papeis-papelao.svg" alt="Pepéis e Papelão">
+                        <span>Pepeis e Papelão</span>
+                    </li>
 
+                    <li data-id="4">
+                        <img src="/assets/eletronicos.svg" alt="Resíduos Eletronicos">
+                        <span>Resíduos Eletronicos</span>
+                    </li>
+
+                    <li data-id="5">
+                        <img src="/assets/organicos.svg" alt="Resíduos Orgânicos">
+                        <span>Resíduos Orgânicos</span>
+                    </li>
+
+                    <li data-id="6">
+                        <img src="/assets/oleo.svg" alt="Óleo de Cozinha">
+                        <span>Óleo de Cozinha</span>
+                    </li>
+                </div>
+                <input type="hidden" name="items">
             </fieldset>
 
             <button type="submit">Cadastrar ponto de coleta</button>
