--- a/create-point.html
+++ b/create-point.html
@@ -16,7 +16,7 @@
         
         <header>
             <img src="assets/logo.svg" alt="Logo Marca">
-            <a href="#">
+            <a href="index.html">
                 <span></span>
                 Voltar para a home
             </a>
