--- a/search-results.html
+++ b/search-results.html
@@ -16,7 +16,7 @@
         
         <header>
             <img src="assets/logo.svg" alt="Logo Marca">
-            <a href="#">
+            <a href="index.html">
                 <span></span>
                 Voltar para a home
             </a>
@@ -28,9 +28,19 @@
             </h4>
             <div class="cards">
                 <div class="card">
-                    <img src="" alt="Colectoria">
+                    <img src="https://images.unsplash.com/photo-1481761289552-381112059e05?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1461&q=80" alt="Colectoria">
                     <h1>Colectoria</h1>
                     <h3>Resíduos Eletrônicos, Lãmpadas</h3>
+                    <p>
+                        Rio do sul, Santa Catarina <br/>
+                        Guilherme Gambella, Jardmin América <br/>
+                        Nº 260
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="https://images.unsplash.com/photo-1528323273322-d81458248d40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=801&q=80" alt="Papersider">
+                    <h1>Papersider</h1>
+                    <h3>Papéis e Papelão</h3>
                     <p>
                         Rio do sul, Santa Catarina <br/>
                         Guilherme Gambella, Jardmin América <br/>
